[fix] hide horizontal scrollbar in DataList component

--- a/aim/web/ui/src/pages/RunDetail/RunDetail.scss
+++ b/aim/web/ui/src/pages/RunDetail/RunDetail.scss
@@ -179,6 +179,7 @@
 
 .RunDetailMetricsTab {
   margin-top: 1.5rem;
+  padding-bottom: 1.5rem;
   &__container {
     height: 100%;
     display: flex;
